@@ -9,13 +9,14 @@ import org.odpi.openmetadata.repositoryservices.connectors.stores.metadatacollec
 import org.odpi.openmetadata.repositoryservices.connectors.stores.metadatacollectionstore.properties.instances.Relationship;
 import org.odpi.openmetadata.repositoryservices.connectors.stores.metadatacollectionstore.repositoryconnector.OMRSRepositoryHelper;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
 
 
 /**
- * ExternalReferenceConverter provides common methods for transferring relevant properties from an Open Metadata Repository Services (OMRS)
- * EntityDetail object into a bean that inherits from ExternalReferenceElement.
+ * ElementStubConverter provides common methods for transferring relevant properties from an Open Metadata Repository Services (OMRS)
+ * EntityProxy object into an ElementStub bean.
  */
 public class ElementStubConverter<B> extends GovernanceProgramOMASConverter<B>
 {
@@ -53,7 +54,7 @@ public class ElementStubConverter<B> extends GovernanceProgramOMASConverter<B>
             /*
              * This is initial confirmation that the generic converter has been initialized with an appropriate bean class.
              */
-            B returnBean = beanClass.newInstance();
+            B returnBean = beanClass.getDeclaredConstructor().newInstance();
 
             if (returnBean instanceof ElementStub)
             {
@@ -64,7 +65,7 @@ public class ElementStubConverter<B> extends GovernanceProgramOMASConverter<B>
 
             return null;
         }
-        catch (IllegalAccessException | InstantiationException | ClassCastException error)
+        catch (IllegalAccessException | InstantiationException | ClassCastException | NoSuchMethodException | InvocationTargetException error)
         {
             super.handleInvalidBeanClass(beanClass.getName(), error, methodName);
         }
